# Qiner

./: CMakeLists.txt  LICENCE  NOTICE.md  README.md
docs/: MINING.md
src/: K12AndKeyUtil.h  Qiner.cpp  addition_training_table.h  score_addition.h  score_addition_initvalue.h  score_common.h  score_hyperidentity.h
src/cuda/: CMakeLists.txt  score_addition_cuda.cu  score_addition_cuda.h
test/: CMakeLists.txt  main.cpp  score_addition_test.cpp
tools/: CMakeLists.txt  score_addition_verify.cpp  score_params.h  score_test_generator.cpp
